Fix scrollbar color under dark theme

--- a/devclean-ui/src/App.css
+++ b/devclean-ui/src/App.css
@@ -1,7 +1,7 @@
-.logo.vite:hover {
-  filter: drop-shadow(0 0 2em #747bff);
+html {
+  color-scheme: light;
 }
 
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafb);
+html.dark {
+  color-scheme: dark;
 }
